<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".AddMeasurementActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/acme_regular"
        android:gravity="center"
        android:text="Enter  Measurements"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewDateId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/acme_regular"
                android:text="@string/date_st"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextDateId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner_whitebg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/textViewTimeId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme_regular"
                android:text="@string/time_st"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTimeId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner_whitebg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/textViewSysId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme_regular"
                android:text="@string/sys_st"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextSysId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner_whitebg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/textViewDiasId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme_regular"
                android:text="@string/dias_st"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextDiasId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner_whitebg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewHrtId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme_regular"
                android:text="@string/hrt_st"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextHrtId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corner_whitebg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/textViewCommentId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/acme_regular"
                android:text="@string/cmnt_st"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextCommentId"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/rounded_corner_whitebg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="22sp"
                />

            <Button
                android:id="@+id/addButtonId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textColor="#ffffff"
                android:background="@drawable/button_background"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:text="Insert" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>