<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/viewMmButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/acme_regular"
        android:text="View  Measurements"
        style="@android:style/Widget.Button"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/AddMmButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#ffffff"
        style="@android:style/Widget.Button"
        android:background="@drawable/button_background"
        android:fontFamily="@font/acme_regular"
        android:text="Add  Measurements"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:width="40dp"
        android:text="Logout" />

</LinearLayout>