...
        android:text="History"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/measureListViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/measureViewTextId"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corner_whitebg"
        android:elevation="@dimen/cardview_default_elevation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatAddBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="25dp"
...
